--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -54,14 +54,14 @@
 
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
-    <script src="app/company/identity/company.identity.controller.js"></script>
-    <script src="app/company/detail/company.detail.service.js"></script>
-    <script src="app/company/detail/company.detail.controller.js"></script>
+    <script src="app/album/detail/album.detail.service.js"></script>
+    <script src="app/album/detail/album.detail.controller.js"></script>
+    <script src="app/album/identity/album.identity.controller.js"></script>
     <script src="app/index.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
-    <script src="app/people/people.controller.js"></script>
+    <script src="app/user/user.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
-    <script src="app/company/company.controller.js"></script>
+    <script src="app/album/album.controller.js"></script>
     <script src="app/config.js"></script>
     <!-- endinject -->
 
